# EPSO

./: CMakeLists.txt  README.md
src/cfg/: cfg.cpp  cfg.h
src/ebpf/: bpf.h  ctx.cpp  ctx.h
src/instruction/: insn.cpp  insn.h  insn_simulator.cpp  insn_simulator.h  insn_sym_simulator.cpp  insn_sym_simulator.h
src/optimizer/: optimizer.cpp  optimizer.h
src/patcher/: patcher.cpp  patcher.h
src/peepholeOptimizer/: peepholeOptimizer.cpp  peepholeOptimizer.h
src/state/: memory.cpp  memory.h  regs.cpp  regs.h  state.cpp  state.h
src/symstate/: sym_memory.cpp  sym_memory.h  sym_regs.cpp  sym_regs.h
src/synthesizer/: opt_patterns.txt  synthesizer.cpp  synthesizer.h
src/testcase/: testcase.cpp  testcase.h  testcase_gen.cpp  testcase_gen.h
src/validator/: validator.cpp  validator.h
src/verifier/: README.md  verifier.cpp  verifier.h  verifier_passer.cpp  verifier_passer.h
tools/: epso.cpp  epso_pattern.cpp
